# lilsat-rs

./: .gitignore  CLAUDE.md  Cargo.toml
src/: lib.rs  main.rs
test/: .gitignore  run.sh
tests/: satlib_tests.rs
tests/common/: mod.rs
