[package]
name = "lilsat-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "lilsat_rs"
path = "src/lib.rs"

[[bin]]
name = "lilsat-rs"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
walkdir = "2"
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
libtest-mimic = "0.8"

[[test]]
name = "satlib_tests"
path = "tests/satlib_tests.rs"
harness = false
